# onkyo-api

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  onkyo.py  pyproject.toml  swagger.yml
tests/: test_api.py  test_onkyo.py
